chore: added new script

--- a/install
+++ b/install
@@ -12,8 +12,10 @@ fi
 
 # Copy the script to the installation directory
 cp fuckthis "$INSTALL_DIR"
+cp getflake "$INSTALL_DIR"
 
 # Change permissions to make the script executable
 chmod +x "$INSTALL_DIR/fuckthis"
+chmod +x "$INSTALL_DIR/getflake"
 
 echo "Installation complete. Enjoy the wacky scripts!"
