--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # Defining script location
-INSTALL_DIR="/usr/local/bin"
+INSTALL_DIR="$HOME/.local/bin"
 
 # Ensure the directory exists and is writable
 if [ ! -w "$INSTALL_DIR" ]; then
