--- a/install
+++ b/install
@@ -1,13 +1,13 @@
 #!/bin/bash
 
 # Defining script location
-INSTALL_DIR="$HOME/.local/bin"
+INSTALL_DIR="/usr/local/bin"
 
 # Ensure the directory exists and is writable
 if [ ! -w "$INSTALL_DIR" ]; then
-    echo "Error: $INSTALL_DIR is not writable. Installation failed."
-    echo "Try again with sudo."
-    exit 1
+	echo "Error: $INSTALL_DIR is not writable. Installation failed."
+	echo "Try again with sudo."
+	exit 1
 fi
 
 # Copy the script to the installation directory
